snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.jar.sha512
a7c898179a1a8977a2bb253ef55e0d7271f859e135257c06a176bc5393ceddec99d85a3b3f1d67ab9bdbd3d1661c91359318deceb2750188f601ee9b70d4e2ac